# only_FSTR

./: .gitignore  pyproject.toml  readme.md
Mountains/passage/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Mountains/passage/migrations/: 0001_initial.py  0002_alter_level_autumn_alter_level_spring_and_more.py  0003_alter_level_options_alter_level_autumn_and_more.py  0004_coord_remove_pereval_coords_pereval_coord_and_more.py  0005_alter_pereval_options_alter_user_options.py  0006_alter_pereval_other_titles.py  0007_remove_image_image_image_image_url_alter_image_title.py  0008_remove_image_image_url_image_img.py  0009_alter_pereval_status.py  0010_alter_user_email.py
Mountains/work/: settings.py  urls.py
