[tool.poetry]
name = "only-fstr"
version = "0.1.0"
description = ""
authors = ["Rasen Nikov <rasen800@gmail.com>"]
readme = "README.md"
packages = [{include = "only_fstr"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
